Setup articles page

--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -5,3 +5,4 @@
 @import 'layout/responsive.scss';
 @import './custom_bootstrap.scss';
 @import './authentication/devise.scss';
+@import './articles/index.scss';
