--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,8 +11,16 @@
   </head>
 
   <body>
-		<p class="notice"><%= notice %></p>
-		<p class="alert"><%= alert %></p>
+		<% if flash[:notice] %>
+		<div class="notification btn-success global-notification">
+			<p class="notice"><%= notice %></p>
+		</div>
+	<% end %>
+	<% if flash[:alert] %>
+		<div class="notification btn-danger global-notification">
+			<p class="alert"><%= alert %></p>
+		</div>
+	<% end %>
 
     <%= yield %>
   </body>
