--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,4 +1,4 @@
-<%= simple_form_for @article do |f| %>
+<%= simple_form_for article do |f| %>
 	<%= f.error_notification %>
 	<%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
 
@@ -24,6 +24,6 @@
 	</div>
 
 	<div class="form-actions mb-3">
-		<%= f.button :submit, class:'btn btn-major-brand-lightblue create-service' %>
+		<%= f.button :submit, class:'btn btn-secondary' %>
 	</div>
 <% end %>
