--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
 	<div class="text-left"><a href="javascript:history.back()"><i class="fa fa-arrow-circle-left" style="font-size:36px"></i></a></div>
-	<h1 class="">New Article</h1>
+	<h1 class="">Edit Article</h1>
 
 	<%= render 'form', article: @article %>
 </div>
