--- a/app/views/articles/_articles_list.html.erb
+++ b/app/views/articles/_articles_list.html.erb
@@ -1,18 +1,27 @@
 <div>
-	<div class="articles-wrapper">
-		<% articles.each do |article| %>
-
-
-			<div class="jumbotron">
-				<div class="container">
-					<h1 class="display-4"><%= article.title %></h1>
-					<p class="lead"><%= article.body  %></p>
-					<hr class="my-4">
-					<p class="lead">
-						<%= link_to 'Read more...', article_path(article), class:'btn btn-booking btn-lg btn-success' %>
-					</p>
-				</div>
+	<div class="row">
+		<div class="col-md-12">
+			<% if articles.present? %>
+			<div class="card-deck m-2 card-grid">
+				<% articles.each do |article| %>
+					<div class="card" style="max-width: 20rem; height: 423px;">
+						<% if article.image.attached? %>
+							<%= image_tag article.image, class: 'article-image-small'%>
+						<% end %>
+						<div class="p-2">
+							<h5 class="card-title"><%= article.title %></h5>
+						</div>
+						<div class="card-body">
+							<p class="card-text "><%= article.body.split(' ')[0..20].join(' ')  %>...</p>
+							<p class=""><%= link_to 'Read more...', article_path(article) %></p>
+						</div>
+						<p class="text-right mr-2"><%= article.state %></p>
+					</div>
+				<% end %>
 			</div>
-		<% end %>
+			<% else %>
+				<h3 class="mt-3">There are no published articles!</h3>
+			<% end %>
+		</div>
 	</div>
 </div>
