--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,43 +1,41 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<div class="container">
+	<div class="row space-top-1">
+		<div class="col-12">
+			<div class="row">
+				<div class="col col-lg-6">
+					<div class="account__user_form">
+						<h2>Update Your Account</h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+						<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+							<%= f.error_notification %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
+							<%= f.input :email, required: true, autofocus: true%>
 
-  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-    <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
-  <% end %>
+							<% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+								<p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
+							<% end %>
 
-  <div class="field">
-    <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-    <% if @minimum_password_length %>
-      <br />
-      <em><%= @minimum_password_length %> characters minimum</em>
-    <% end %>
-  </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
+							<%= f.input :first_name,placeholder:"First Name" %>
+							<%= f.input :last_name,placeholder:"Last Name" %>
+							<%= f.input :background_color,placeholder:"'green', 'black', etc" %>
+							<%= f.input :current_password,
+													hint: "we need your current password to confirm your changes",
+													required: true,
+													input_html: { autocomplete: "current-password" } %>
 
-  <div class="field">
-    <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-    <%= f.password_field :current_password, autocomplete: "current-password" %>
-  </div>
 
-  <div class="actions">
-    <%= f.submit "Update" %>
-  </div>
-<% end %>
+							<%= f.button :submit, "Update", class:'btn btn-secondary' %>
+						<% end %>
 
-<h3>Cancel my account</h3>
+						<h3 class="space-top-2">Cancel my account</h3>
 
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
+						<p>Unhappy?</p><%= link_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class:"btn btn-danger" %>
 
-<%= link_to "Back", :back %>
+						<%= link_to "Back", :back, class:'btn btn-success' %>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
