--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -1,14 +1,8 @@
 <%- if controller_name != 'sessions' %>
-  <%= link_to "Log in", new_session_path(resource_name) %><br />
+  <%= link_to "Already have an account? Log in", new_session_path(resource_name) %><br />
 <% end %>
 
-<%- if devise_mapping.registerable? && controller_name != 'registrations' %>
-  <%= link_to "Sign up", new_registration_path(resource_name) %><br />
-<% end %>
 
-<%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
-  <%= link_to "Forgot your password?", new_password_path(resource_name) %><br />
-<% end %>
 
 <%- if devise_mapping.confirmable? && controller_name != 'confirmations' %>
   <%= link_to "Didn't receive confirmation instructions?", new_confirmation_path(resource_name) %><br />
@@ -18,8 +12,31 @@
   <%= link_to "Didn't receive unlock instructions?", new_unlock_path(resource_name) %><br />
 <% end %>
 
-<%- if devise_mapping.omniauthable? %>
-  <%- resource_class.omniauth_providers.each do |provider| %>
-    <%= link_to "Sign in with #{OmniAuth::Utils.camelize(provider)}", omniauth_authorize_path(resource_name, provider), method: :post %><br />
-  <% end %>
-<% end %>
+<div class="d-inline-block">
+	<%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
+		<%= link_to "Forgot your password?", new_password_path(resource_name) %><br />
+	<% end %>
+
+	<%- if devise_mapping.registerable? && controller_name != 'registrations' %>
+		<%= link_to "Don't have an account? Sign up", new_registration_path(resource_name) %><br />
+	<% end %>
+</div>
+
+<div class="divider">OR</div>
+
+<div class="next-socials">
+	<%- if devise_mapping.omniauthable? %>
+		<%- resource_class.omniauth_providers.each do |provider| %>
+			<% if provider == :facebook %>
+				<%= link_to omniauth_authorize_path(resource_name, provider), class: 'mr-3', method: :post do %>
+					<i class="fa fa-facebook-official" style="font-size:36px"></i>
+				<% end %>
+			<% else %>
+				<%= link_to omniauth_authorize_path(resource_name, provider), method: :post do %>
+					<i class="fa fa-google" style="font-size:36px"></i>
+				<% end %>
+			<% end %>
+		<% end %>
+	<% end %>
+</div>
+
