Create seed file and adjust styling

--- a/app/javascript/stylesheets/articles/index.scss
+++ b/app/javascript/stylesheets/articles/index.scss
@@ -18,3 +18,14 @@
   width: 40%;
   margin: 0px auto;
 }
+.nav-link li a {
+  padding: 5px 5px;
+}
+.logo {
+  font-size: 30px;
+  cursor: pointer;
+  color: gainsboro;
+}
+.new-article {
+  padding: 5px 5px;
+}
