--- a/app/javascript/stylesheets/layout/responsive.scss
+++ b/app/javascript/stylesheets/layout/responsive.scss
@@ -13,7 +13,10 @@
 	padding: 50px 25px;
   }
   .article-container {
-	width: 80%;
-	margin: 0px auto;
+	width: 80% !important;
+	margin: 0px auto !important;
+  }
+  .card-grid {
+	display: block !important;
   }
 }
