--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -1,19 +1,45 @@
 <header header id="header" class="header pt-2 bg-secondary bg-gradient">
 	<div id="" class="container">
-		<nav class="d-flex justify-content-between">
-			<%= link_to "NextBlog", root_path, class: 'text-black logo' %>
-			<div id="" class="">
-				<ul class="d-flex" style="list-style: none;">
-					<% if current_user %>
-						<li class=""><%= link_to "My Articles", my_articles_path, class:"text-black btn btn-primary list-button mr-2" %></li>
-						<li class=""><%= link_to "Account", user_settings_path, class:"text-black btn btn-primary list-button mr-2" %></li>
-						<li class=""><%= link_to "Logout", user_logout_path, class:"text-black btn btn-primary list-button" %></li>
-					<% else %>
-						<li class=""><%= link_to "Login", user_login_path, class:"btn btn-primary m3 mr-2" %></li>
-						<li class=""><%= link_to "Sign Up It's Free!", user_signup_path, class:"btn btn-primary m3" %></li>
-					<% end %>
-				</ul>
-			</div>
+
+
+
+		<nav class="navbar justify-content-between">
+<!--			<a class="navbar-brand">Navbar</a>-->
+			<%= link_to "NextBlog", root_path, class: 'navbar-brand text-black logo' %>
+
+			<ul class="d-flex nav-link" style="list-style: none;">
+				<% if current_user %>
+					<li class=""><%= link_to "My Articles", my_articles_path, class:"text-black btn btn-primary list-button mr-2" %></li>
+					<li class=""><%= link_to "Account", user_settings_path, class:"text-black btn btn-primary list-button mr-2" %></li>
+					<li class=""><%= link_to "Logout", user_logout_path, class:"text-black btn btn-primary list-button" %></li>
+				<% else %>
+					<li class=""><%= link_to "Login", user_login_path, class:"btn btn-primary m3 mr-2" %></li>
+					<li class=""><%= link_to "Sign Up It's Free!", user_signup_path, class:"btn btn-primary m3" %></li>
+				<% end %>
+			</ul>
+<!--			<form class="form-inline">-->
+<!--				<input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">-->
+<!--				<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>-->
+<!--			</form>-->
 		</nav>
+
+
+
+
+<!--		<nav class="d-flex justify-content-between">-->
+			<%#= link_to "NextBlog", root_path, class: 'text-black logo' %>
+<!--			<div id="" class="">-->
+<!--				<ul class="d-flex" style="list-style: none;">-->
+					<%# if current_user %>
+<!--						<li class=""><%#= link_to "My Articles", my_articles_path, class:"text-black btn btn-primary list-button mr-2" %></li>-->
+<!--						<li class=""><%#= link_to "Account", user_settings_path, class:"text-black btn btn-primary list-button mr-2" %></li>-->
+<!--						<li class=""><%#= link_to "Logout", user_logout_path, class:"text-black btn btn-primary list-button" %></li>-->
+					<%# else %>
+<!--						<li class=""><%#= link_to "Login", user_login_path, class:"btn btn-primary m3 mr-2" %></li>-->
+<!--						<li class=""><%#= link_to "Sign Up It's Free!", user_signup_path, class:"btn btn-primary m3" %></li>-->
+					<%# end %>
+<!--				</ul>-->
+<!--			</div>-->
+<!--		</nav>-->
 	</div>
 </header>
