--- a/app/views/articles/_articles_list.html.erb
+++ b/app/views/articles/_articles_list.html.erb
@@ -20,7 +20,7 @@
 				<% end %>
 			</div>
 			<% else %>
-				<h3 class="mt-3">There are no published articles!</h3>
+				<h3 class="mt-3">There are no articles!</h3>
 			<% end %>
 		</div>
 	</div>
